--- a/ImportGraphObjectsTest/Controls/GraphControl.xaml
+++ b/ImportGraphObjectsTest/Controls/GraphControl.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="ImportGraphObjectsTest.Controls.PraghControl"
+﻿<UserControl x:Class="ImportGraphObjectsTest.Controls.GraphControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ImportGraphObjectsTest.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="200" d:DesignWidth="200">
     <Grid
-        Background="DarkGray"
         >
-            
+        <Canvas x:Name="CanvasDraw"
+                SizeChanged="CanvasDraw_SizeChanged"/>
     </Grid>
 </UserControl>
