--- a/ImportGraphObjectsTest/MainWindow.xaml
+++ b/ImportGraphObjectsTest/MainWindow.xaml
@@ -11,6 +11,14 @@
         MinHeight="500"
         MinWidth="500"
         Height="450" Width="800">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ImportGraphObjectsTest;component/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -22,16 +30,15 @@
                 <Button Content="Import csv"
                         Width="Auto"
                         Margin="5"
-                        Padding="10,5"
+                        Style="{StaticResource ButtonLightStyle}"
                         Command="{Binding ImportCSV_Commmand}"
                         />
                 <Button Content="Import xls/xlsx"
                         Width="Auto"
                         Margin="5"
-                        Padding="10,5"
+                        Style="{StaticResource ButtonLightStyle}"
                         Command="{Binding ImportXLS_Commmand}"
                         />
-
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
@@ -45,19 +52,16 @@
                             VirtualizingStackPanel.IsVirtualizing="True"
                             ItemsSource="{Binding ObjectsImport}" 
                             SelectedItem="{Binding SelectedObject}"
-                            AutoGenerateColumns="False"
-                            CanUserDeleteRows="False"
-                            CanUserAddRows="False"
-                            SelectionMode="Single"
+                            Style="{StaticResource DataGridStyle}"
                             Margin="5"
                             >
                         <DataGrid.Columns>
 
                             <DataGridTextColumn Header="Name" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"  Width="Auto"/>
-                            <DataGridTextColumn Header="Distance" Binding="{Binding Distance, UpdateSourceTrigger=PropertyChanged}"/>
-                            <DataGridTextColumn Header="Angle" Binding="{Binding Angle, UpdateSourceTrigger=PropertyChanged}"/>
-                            <DataGridTextColumn Header="Width" Binding="{Binding Width, UpdateSourceTrigger=PropertyChanged}"/>
-                            <DataGridTextColumn Header="Hegth" Binding="{Binding Hegth, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridTextColumn Header="Distance" Binding="{Binding Distance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N1}}"/>
+                            <DataGridTextColumn Header="Angle" Binding="{Binding Angle, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N1}}"/>
+                            <DataGridTextColumn Header="Width" Binding="{Binding Width, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N1}}"/>
+                            <DataGridTextColumn Header="Hegth" Binding="{Binding Hegth, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N1}}"/>
                             <DataGridTemplateColumn Header="IsDefect" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
@@ -89,10 +93,11 @@
                                             BorderBrush="Gray">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="{Binding Name, StringFormat={}{0:G}:}" 
-                                                                Width="100"
-                                                                Margin="5"/>
+                                                    FontWeight="Bold"    
+                                                    Width="100"
+                                                    Margin="5"/>
                                             <TextBlock Text="{Binding Value}"
-                                                                Margin="5"/>
+                                                    Margin="5"/>
                                         </StackPanel>
                                     </Border>
                                 </DataTemplate>
